{
    "name": "InputData",
    "maps": [
        {
            "name": "Hero",
            "id": "0505474c-85aa-4286-841d-9501f25733f0",
            "actions": [
                {
                    "name": "MovementX",
                    "type": "PassThrough",
                    "id": "64fc3e34-e7e1-43e7-bce7-d966951f5657",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementY",
                    "type": "PassThrough",
                    "id": "63d2b0f3-f46c-4fa7-96c1-ef0d4b120709",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementPadMovement",
                    "type": "PassThrough",
                    "id": "efa77db0-51ea-48da-83ac-00f1a2b3feb4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementPadShield",
                    "type": "PassThrough",
                    "id": "4f7d584c-7376-49db-9d17-4fe2fd9c5787",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "XAxis",
                    "id": "d2a7b18e-e761-40d5-ad6c-3a2c94e312d5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "101e4ea7-c3fb-430c-a402-e691e7157bf2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "286c52c2-4437-4b9a-a465-6ef53bbca057",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2036fc2a-9307-4716-b2be-217a40a6d85c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3df732a3-af3e-4fef-9ef4-47428599ce62",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "YAxis",
                    "id": "424e27e9-7efa-49cc-a07c-97769ff08c6b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d5526518-cf9e-4c5b-bd22-1da85a9b61e2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "93d47d30-c27b-4222-b38e-6b10342e51b1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "93f74fc4-2b51-448e-9a51-1f502df840b1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8f0217e7-51d0-4d70-9b71-dc0262d13083",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis",
                    "id": "562b878b-45c4-43e5-b486-fa413751586d",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementPadMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16f1b06e-f02f-4daa-a200-e68c0a9aaa9b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementPadMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfa73154-b662-42f1-8dbe-f481425e0788",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "MovementPadShield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Axis",
                    "id": "70171bee-72f7-4547-886f-7ff02a408c10",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementPadShield",
                    "isComposite": true,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "dcd254e0-5aa0-455f-86b0-04f3ea72af23",
            "actions": [
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "e7f09464-8523-4c7a-9b03-89f77c0087d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "57c14613-3c2b-4cf8-aa02-cafe72055bf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "71582e5a-4f41-4a3e-88b9-13a0c520dfa4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "16fe25c4-700b-49a0-b22d-14db7dde4596",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edf5a000-61fd-440e-b08d-6ada9e7e447d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7ec3764-d786-488a-9d74-65e444c7b111",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "InputController",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "InputController",
            "bindingGroup": "InputController",
            "devices": []
        }
    ]
}